--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -32,6 +32,22 @@
     "<hr>\n",
     "<hr>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b162004",
+   "metadata": {},
+   "source": [
+    "## **Neural Network Implementation Note**\n",
+    "\n",
+    "- All values must be real numbers, not integers. We will use double point precision (e.g., 0.1, 0.2).\n",
+    "\n",
+    "- The weights and inputs may be implemented as `1-D` vectors. We will use the `std::vector<double>` type from the C++ Standard Library i.e. `vec(w)` and `vec(x)`.\n",
+    "\n",
+    "- This way, the sum may be calculated in one operation: `z = vec(w) * vec(x)`.\n",
+    "\n",
+    "- We will feed the weighted sum to the sigmoid activation function.\n"
+   ]
   }
  ],
  "metadata": {
