--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -48,6 +48,49 @@
     "\n",
     "- We will feed the weighted sum to the sigmoid activation function.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85211873",
+   "metadata": {},
+   "source": [
+    "## **Files and Their Meaning**\n",
+    "\n",
+    "**`.h` files**: These are header files in C++ that typically contain function declarations, class definitions, and macros. They are included in `.cpp` files to provide the necessary declarations for the functions and classes used in the implementation.\n",
+    "\n",
+    "**`.cpp` files**: These are source files in C++ that contain the actual implementation of the functions and classes declared in the corresponding header files. They are compiled to create the final executable program.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74332d50",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21c2128f",
+   "metadata": {},
+   "source": [
+    "## **Neural Network into Action**\n",
+    "\n",
+    "We will write all the declarations in the header files and all the implementations in the source files. This will help us keep our code organized and modular.\n",
+    "\n",
+    "Our first task it to implement basic `Multi Layer Perceptron` class in C++.\n",
+    "\n",
+    "For that we are creating `MLP.h` and `MLP.cpp` files.\n",
+    "\n",
+    "### **`MLP.h`**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
