docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -89,6 +89,23 @@
     "\n",
     "```C++\n",
     "\n",
+    "//\n",
+    "\n",
+    "class Perceptron\n",
+    "{\n",
+    "public:\n",
+    "  std::vector<double> weights;\n",
+    "  double bias;\n",
+    "\n",
+    "  // Constructor\n",
+    "  Perceptron(size_t inputs, double bias = 1.0);\n",
+    "\n",
+    "  double run(std::vector<double> x);\n",
+    "\n",
+    "  void set_weights(std::vector<double> w_init);\n",
+    "\n",
+    "  double sigmoid(double x);\n",
+    "};\n",
     "```\n"
    ]
   }
