--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "```C++\n",
     "\n",
-    "//\n",
+    "// Perceptron class\n",
     "\n",
     "class Perceptron\n",
     "{\n",
