docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -106,7 +106,9 @@
     "\n",
     "  double sigmoid(double x);\n",
     "};\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "Here, `size_t` is used to represent the number of inputs to the perceptron, ensuring that the value is always non-negative. It is an `unsigned integer` type which store `8 Bytes` in 64 Bit System and `4 Bytes` in 32 Bit System.\n"
    ]
   }
  ],
