docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -108,7 +108,17 @@
     "};\n",
     "```\n",
     "\n",
-    "Here, `size_t` is used to represent the number of inputs to the perceptron, ensuring that the value is always non-negative. It is an `unsigned integer` type which store `8 Bytes` in 64 Bit System and `4 Bytes` in 32 Bit System.\n"
+    "Here, `size_t` is used to represent the number of inputs to the perceptron, ensuring that the value is always non-negative. It is an `unsigned integer` type which store `8 Bytes` in 64 Bit System and `4 Bytes` in 32 Bit System.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "Now we'll implement the `Perceptron` class in the `MLP.cpp`.\n",
+    "\n",
+    "### **`MLP.cpp`**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "```\n"
    ]
   }
  ],
