docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -116,9 +116,68 @@
     "\n",
     "### **`MLP.cpp`**\n",
     "\n",
+    "Here, we will write the implementation of the `Perceptron` class.\n",
+    "\n",
     "```C++\n",
     "\n",
-    "```\n"
+    "#include \"mlp.h\"\n",
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "// Random Number Generator Function\n",
+    "\n",
+    "double frand()\n",
+    "{\n",
+    "  return (2.0 * (double)rand() / RAND_MAX) - 1.0;\n",
+    "}\n",
+    "\n",
+    "// Return a new Perceptron Object with the Specified number of Inputs (+1 for the bias)\n",
+    "\n",
+    "Perceptron::Perceptron(size_t inputs, double bias)\n",
+    "{\n",
+    "  this->bias = bias;\n",
+    "\n",
+    "  // Initialize the Weights as Random numbers of Double between -1 and 1\n",
+    "\n",
+    "  weights.resize(inputs + 1); // Resize the Vector for Weights + Bias\n",
+    "\n",
+    "  // Generate Random Numbers and Fill in the Vectors. Pass the frand function to generate the number\n",
+    "\n",
+    "  generate(weights.begin(), weights.end(), frand);\n",
+    "}\n",
+    "\n",
+    "// Run Function\n",
+    "// Feeds an Input Vector X into the perceptron to return the activation function output.\n",
+    "\n",
+    "double Perceptron::run(std::vector<double> x)\n",
+    "{\n",
+    "\n",
+    "  // Add the bias at the end\n",
+    "  x.push_back(bias);\n",
+    "\n",
+    "  // Weighted Sum\n",
+    "  double sum = inner_product(x.begin(), x.end(), weights.begin(), (double)0.0);\n",
+    "\n",
+    "  return sigmoid(sum); // Pass into the sigmoid function\n",
+    "}\n",
+    "\n",
+    "// Set the weights. w_init is a vector with the Weights\n",
+    "\n",
+    "void Perceptron::set_weights(std::vector<double> w_init)\n",
+    "{\n",
+    "  weights = w_init; // Copies the vector\n",
+    "}\n",
+    "\n",
+    "// Evaluate the Sigmoid Function for the floating point of input\n",
+    "\n",
+    "double Perceptron::sigmoid(double x)\n",
+    "{\n",
+    "  return 1.0 / (1.0 + exp(-x));\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Below is the Step wise Step Explanation for Each Implementation.\n",
+    "\n"
    ]
   }
  ],
