docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -100,10 +100,13 @@
     "  // Constructor\n",
     "  Perceptron(size_t inputs, double bias = 1.0);\n",
     "\n",
+    "  // Run the perceptron\n",
     "  double run(std::vector<double> x);\n",
     "\n",
+    "  // Set Custom Weights if needed\n",
     "  void set_weights(std::vector<double> w_init);\n",
     "\n",
+    "  // Sigmoid Activation Function\n",
     "  double sigmoid(double x);\n",
     "};\n",
     "```\n",
@@ -192,7 +195,19 @@
     "\n",
     "`inner_product(x.begin(), x.end(), weights.begin(), (double)0.0);`\n",
     "\n",
-    "This line computes the weighted sum of the inputs by taking the inner product of the input vector `x` (which now includes the bias) and the weights vector. The `inner_product` function multiplies each element of the input vector by the corresponding element of the weights vector and sums the results. The last argument `(double)0.0` specifies the initial value for the sum.\n"
+    "This line computes the weighted sum of the inputs by taking the inner product of the input vector `x` (which now includes the bias) and the weights vector. The `inner_product` function multiplies each element of the input vector by the corresponding element of the weights vector and sums the results. The last argument `(double)0.0` specifies the initial value for the sum.\n",
+    "\n",
+    "`return sigmoid(sum);`\n",
+    "\n",
+    "This line passes the computed weighted sum into the sigmoid function and returns the result. The sigmoid function applies the logistic activation function to the weighted sum, squashing the output to a range between 0 and 1. This is a crucial step in the perceptron's operation, as it determines the final output of the neuron.\n",
+    "\n",
+    "`weights = w_init;`\n",
+    "\n",
+    "This line sets the weights of the perceptron to the provided initialization vector `w_init`. This allows the user to specify custom weights for the perceptron, which can be useful for tasks like transfer learning or fine-tuning a pre-trained model.\n",
+    "\n",
+    "`return 1.0 / (1.0 + exp(-x));`\n",
+    "\n",
+    "Calculates the sigmoid activation value for the given input `x`.\n"
    ]
   }
  ],
