docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -262,6 +262,80 @@
     "\n",
     "Calculates the sigmoid activation value for the given input `x`.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72e343f1",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7649416",
+   "metadata": {},
+   "source": [
+    "## **AND Gate**\n",
+    "\n",
+    "Both the inputs need to be `True` for `True` output.\n",
+    "\n",
+    "Now how do we create a Perceptron that can classify inputs like an AND gate?\n",
+    "\n",
+    "Let's visualize the inputs and outputs of the `AND` gate in a Graph:\n",
+    "\n",
+    "<img src='./Notes_Images/and_gate.png'>\n",
+    "\n",
+    "Now, to successfully classify we need to draw a line that separates the two classes (0 and 1). This line is called the decision boundary.\n",
+    "\n",
+    "<img src='./Notes_Images/boundary.png'>\n",
+    "\n",
+    "**The Line that is To be Drawn is of Sigmoid Function**\n",
+    "\n",
+    "<img src='./Notes_Images/sigmoid.png'>\n",
+    "\n",
+    "In this image, the boundary is the line where sigmoid is `0.5`.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "`Before Moving Forward`,\n",
+    "\n",
+    "Let's try to implement a function that exactly mimics as `AND` gate, but the function should be linear i.e. `f(x1, x2) = w1*x1 + w2*x2 + b`\n",
+    "\n",
+    "**Is that Possible?**\n",
+    "\n",
+    "<img src='./Notes_Images/linear_and.png'>\n",
+    "\n",
+    "This proof shows that it is not possible to create a linear function that mimics the behavior of an `AND` gate.\n",
+    "\n",
+    "The only solution is that the function should be non-linear, which means the function can be `exponential`, `quadratic`, or any other non-linear form.\n",
+    "\n",
+    "**TL;DR: AND is `linearly separable` (a perceptron can classify it), but it is not a linear function of the `inputs`.**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee4a4624",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d42e5c3",
+   "metadata": {},
+   "source": [
+    "## **Our Perceptron as an AND Gate**\n",
+    "\n",
+    "Now let's try to implement our Perceptron as an AND gate. The AND gate outputs 1 only if both inputs are 1, otherwise, it outputs 0.\n"
+   ]
   }
  ],
  "metadata": {
