docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -313,6 +313,8 @@
     "\n",
     "The only solution is that the function should be non-linear, which means the function can be `exponential`, `quadratic`, or any other non-linear form.\n",
     "\n",
+    "<img src='./Notes_Images/non_linear_and.png'>\n",
+    "\n",
     "**TL;DR: AND is `linearly separable` (a perceptron can classify it), but it is not a linear function of the `inputs`.**\n"
    ]
   },
