docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -315,7 +315,76 @@
     "\n",
     "<img src='./Notes_Images/non_linear_and.png'>\n",
     "\n",
-    "**TL;DR: AND is `linearly separable` (a perceptron can classify it), but it is not a linear function of the `inputs`.**\n"
+    "**TL;DR: AND is `linearly separable` (a perceptron can classify it), but it is not a linear function of the `inputs`.**\n",
+    "\n",
+    "### **A Perceptron as an AND Gate**\n",
+    "\n",
+    "Let's say there are two inputs `x1` and `x2`. The perceptron will compute a weighted sum of the inputs and pass it through a step function to produce the output.\n",
+    "\n",
+    "The weighted sum can be represented as:\n",
+    "\n",
+    "```\n",
+    "z = w1*x1 + w2*x2 + b\n",
+    "```\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- `w1` and `w2` are the weights for the inputs\n",
+    "- `b` is the bias term\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "The earlier problem was that we were not able to find a linear function that could separate the two classes (0 and 1).\n",
+    "\n",
+    "But if we pass the output of the `linear function` i.e. `z = w1*x1 + w2*x2 + b` through a `non-linear activation` function i.e. `sigmoid`, we can achieve the desired results.\n",
+    "\n",
+    "**Sigmoid**\n",
+    "\n",
+    "The sigmoid function is defined as:\n",
+    "\n",
+    "```\n",
+    "σ(z) = 1 / (1 + e^(-z))\n",
+    "```\n",
+    "\n",
+    "Where `e` is the base of the natural logarithm.\n",
+    "\n",
+    "When the value of `z` is `0`, the sigmoid function outputs `0.5`.\n",
+    "\n",
+    "When `z` is positive, the sigmoid function outputs a value between `0.5` and `1`. When `z` is negative, the sigmoid function outputs a value between `0` and `0.5`.\n",
+    "\n",
+    "For positive value, the output converges to `1` as `z` increases. For negative value, the output converges to `0` as `z` decreases.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "The step function will output `1` if `z` is greater than or equal to `0`, and `0` otherwise.\n",
+    "\n",
+    "To implement the AND gate, we need to find appropriate values for `w1`, `w2`, and `b` such that the perceptron produces the correct output for all possible combinations of inputs.\n",
+    "\n",
+    "The truth table for the AND gate is as follows:\n",
+    "\n",
+    "| x1  | x2  | AND |\n",
+    "| --- | --- | --- |\n",
+    "| 0   | 0   | 0   |\n",
+    "| 0   | 1   | 0   |\n",
+    "| 1   | 0   | 0   |\n",
+    "| 1   | 1   | 1   |\n",
+    "\n",
+    "From the truth table, we can see that the perceptron should output `1` only when both `x1` and `x2` are `1`. This means we need to set the weights and bias as follows:\n",
+    "\n",
+    "- `w1 = 10`\n",
+    "- `w2 = 10`\n",
+    "- `b = -15`\n",
+    "\n",
+    "With these values, the perceptron will compute the following:\n",
+    "\n",
+    "```text\n",
+    "For (0, 0): z = 10*0 + 10*0 - 15 = -15 (output 0)\n",
+    "For (0, 1): z = 10*0 + 10*1 - 15 = -5 (output 0)\n",
+    "For (1, 0): z = 10*1 + 10*0 - 15 = -5 (output 0)\n",
+    "For (1, 1): z = 10*1 + 10*1 - 15 = 5 (output 1)\n",
+    "```\n",
+    "\n",
+    "As we can see, the perceptron correctly mimics the behavior of the AND gate.\n"
    ]
   },
   {
