docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -378,13 +378,17 @@
     "With these values, the perceptron will compute the following:\n",
     "\n",
     "```text\n",
-    "For (0, 0): z = 10*0 + 10*0 - 15 = -15 (output 0)\n",
-    "For (0, 1): z = 10*0 + 10*1 - 15 = -5 (output 0)\n",
-    "For (1, 0): z = 10*1 + 10*0 - 15 = -5 (output 0)\n",
-    "For (1, 1): z = 10*1 + 10*1 - 15 = 5 (output 1)\n",
+    "For (0, 0): z = 10*0 + 10*0 - 15 = -15 (output 0) i.e. 0.0000003\n",
+    "For (0, 1): z = 10*0 + 10*1 - 15 = -5 (output 0) i.e. 0.0066929\n",
+    "For (1, 0): z = 10*1 + 10*0 - 15 = -5 (output 0) i.e. 0.0066929\n",
+    "For (1, 1): z = 10*1 + 10*1 - 15 = 5 (output 1) i.e. 0.9933071\n",
     "```\n",
     "\n",
-    "As we can see, the perceptron correctly mimics the behavior of the AND gate.\n"
+    "As we can see, the perceptron correctly mimics the behavior of the AND gate.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "So, we can see that the non-linear activation function (sigmoid) is able to generalize the `AND` gate with a `Single Perceptron`. Here, the weighted sum is the `Perceptron` output before applying the sigmoid function.\n"
    ]
   },
   {
