docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -409,7 +409,9 @@
    "source": [
     "## **Our Perceptron as an AND Gate**\n",
     "\n",
-    "Now let's try to implement our Perceptron as an AND gate. The AND gate outputs 1 only if both inputs are 1, otherwise, it outputs 0.\n"
+    "Now let's try to implement our Perceptron as an AND gate. The AND gate outputs 1 only if both inputs are 1, otherwise, it outputs 0.\n",
+    "\n",
+    "### **Step 1: Initialize the Perceptron**\n"
    ]
   }
  ],
