docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -411,7 +411,28 @@
     "\n",
     "Now let's try to implement our Perceptron as an AND gate. The AND gate outputs 1 only if both inputs are 1, otherwise, it outputs 0.\n",
     "\n",
-    "### **Step 1: Initialize the Perceptron**\n"
+    "### **Step 1: Initialize the Perceptron**\n",
+    "\n",
+    "```C++\n",
+    "#include \"mlp.h\"\n",
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "  Perceptron p(2); // Object with 2 inputs on the Stack, No need to delete\n",
+    "\n",
+    "  p.set_weights({10, 10, -15}); // +1 Bias\n",
+    "}\n",
+    "\n",
+    "cout << \"Gate: AND\" << endl;\n",
+    "\n",
+    "cout << \"0 AND 0 = \" << p.run({0,0}) << endl;\n",
+    "cout << \"0 AND 1 = \" << p.run({0,1}) << endl;\n",
+    "cout << \"1 AND 0 = \" << p.run({1,0}) << endl;\n",
+    "cout << \"1 AND 1 = \" << p.run({1,1}) << endl;\n",
+    "```\n"
    ]
   }
  ],
