docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -411,8 +411,6 @@
     "\n",
     "Now let's try to implement our Perceptron as an AND gate. The AND gate outputs 1 only if both inputs are 1, otherwise, it outputs 0.\n",
     "\n",
-    "### **Step 1: Initialize the Perceptron**\n",
-    "\n",
     "```C++\n",
     "#include \"mlp.h\"\n",
     "#include <iostream>\n",
@@ -432,6 +430,14 @@
     "cout << \"0 AND 1 = \" << p.run({0,1}) << endl;\n",
     "cout << \"1 AND 0 = \" << p.run({1,0}) << endl;\n",
     "cout << \"1 AND 1 = \" << p.run({1,1}) << endl;\n",
+    "\n",
+    "// Output\n",
+    "\n",
+    "// Gate: AND\n",
+    "// 0 AND 0 = 3.05902e-07\n",
+    "// 0 AND 1 = 0.00669285\n",
+    "// 1 AND 0 = 0.00669285\n",
+    "// 1 AND 1 = 0.993307\n",
     "```\n"
    ]
   }
