docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -388,7 +388,15 @@
     "\n",
     "<hr>\n",
     "\n",
-    "So, we can see that the non-linear activation function (sigmoid) is able to generalize the `AND` gate with a `Single Perceptron`. Here, the weighted sum is the `Perceptron` output before applying the sigmoid function.\n"
+    "To conclude,\n",
+    "\n",
+    "we can see that the non-linear activation function (sigmoid) is able to generalize the `AND` gate with a `Single Perceptron`. Here, the weighted sum is the `Perceptron` output before applying the sigmoid function.\n",
+    "\n",
+    "### **Note**\n",
+    "\n",
+    "We just witnessed how a `Simple Single Perceptron` can model the behavior of an `AND` gate using a non-linear activation function.\n",
+    "\n",
+    "Now, imagine what `1000s` or `even millions` of these simple perceptrons can achieve when combined in a multi-layer architecture.\n"
    ]
   },
   {
