docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -378,10 +378,10 @@
     "With these values, the perceptron will compute the following:\n",
     "\n",
     "```text\n",
-    "For (0, 0): z = 10*0 + 10*0 - 15 = -15 (output 0) i.e. 0.0000003\n",
-    "For (0, 1): z = 10*0 + 10*1 - 15 = -5 (output 0) i.e. 0.0066929\n",
-    "For (1, 0): z = 10*1 + 10*0 - 15 = -5 (output 0) i.e. 0.0066929\n",
-    "For (1, 1): z = 10*1 + 10*1 - 15 = 5 (output 1) i.e. 0.9933071\n",
+    "For (0, 0): z = 10*0 + 10*0 - 15 = -15 (output 0) i.e. 0.0000003 near to 0\n",
+    "For (0, 1): z = 10*0 + 10*1 - 15 = -5 (output 0) i.e. 0.0066929 near to 0\n",
+    "For (1, 0): z = 10*1 + 10*0 - 15 = -5 (output 0) i.e. 0.0066929 near to 0\n",
+    "For (1, 1): z = 10*1 + 10*1 - 15 = 5 (output 1) i.e. 0.9933071 near to 1\n",
     "```\n",
     "\n",
     "As we can see, the perceptron correctly mimics the behavior of the AND gate.\n",
@@ -396,7 +396,49 @@
     "\n",
     "We just witnessed how a `Simple Single Perceptron` can model the behavior of an `AND` gate using a non-linear activation function.\n",
     "\n",
-    "Now, imagine what `1000s` or `even millions` of these simple perceptrons can achieve when combined in a multi-layer architecture.\n"
+    "Now, imagine what `1000s` or `even millions` of these simple perceptrons can achieve when combined in a multi-layer architecture.\n",
+    "\n",
+    "Also, note that here we witnessed that for the `Non-Linear Activation Function` to give correct output, the combination of `Weights` and `Bias` should be carefully chosen.\n",
+    "\n",
+    "Therefore, the design of neural networks involves not just the architecture (how many layers, how many neurons per layer) but also the careful tuning of these parameters to achieve the desired performance.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "The generalization rule for the `AND` becomes:\n",
+    "\n",
+    "The weights `w1` and `w2` should be positive and the bias `b` should be negative. This ensures that the perceptron will only activate (output 1) when both inputs are 1.\n",
+    "\n",
+    "But,\n",
+    "\n",
+    "The `Bias` should be a negative number that is bigger than the weighted sum of the inputs when they are both `1`. This ensures that the perceptron will only activate (output 1) when both inputs are 1.\n",
+    "\n",
+    "**Would `Sigmoid` be able to Generalize well, if the Weights and Bias are not carefully chosen?**\n",
+    "\n",
+    "No, `Sigmoid` would not be able to generalize well if the weights and bias are not carefully chosen. This is because the `Sigmoid` function is sensitive to the input values, and if the weights and bias do not create a suitable decision boundary, the output may not correctly represent the underlying data distribution.\n",
+    "\n",
+    "If the `Weights` i.e. `{10,10}` and `Bias` i.e. `{-5}` then the output of the `sigmoid` would be as below:\n",
+    "\n",
+    "```bash\n",
+    "\n",
+    "Gate: AND\n",
+    "0 AND 0 = 0.00669285 i.e. 0 which is correct\n",
+    "0 AND 1 = 0.993307 i.e. 1 which is not correct should be 0\n",
+    "1 AND 0 = 0.993307 i.e. 1 which is not correct should be 0\n",
+    "1 AND 1 = 1 i.e. 1 which is correct\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Therefore, for the `Non-Linear` Activation function to work effectively, the weights and bias must be chosen carefully to create a suitable decision boundary.\n",
+    "\n",
+    "For that, Gradient Descent is often used to optimize the weights and bias during the training process.\n",
+    "\n",
+    "### **Follow Up Questions**\n",
+    "\n",
+    "**What if our inputs are not binary (0 or 1) but continuous values? How would that affect the design of the perceptron?**\n",
+    "\n",
+    "**What if we want to implement a different logical operation, such as OR or XOR? How would the design of the perceptron change in those cases?**\n",
+    "\n",
+    "**What if we want to implement a multi-class classification problem? How would the design of the perceptron change in that case?**\n"
    ]
   },
   {
