docs: NN Started

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -392,6 +392,32 @@
     "\n",
     "we can see that the non-linear activation function (sigmoid) is able to generalize the `AND` gate with a `Single Perceptron`. Here, the weighted sum is the `Perceptron` output before applying the sigmoid function.\n",
     "\n",
+    "### **The Equation of Boundary Line That Separates the Classes**\n",
+    "\n",
+    "The decision boundary for the AND gate can be represented by the equation:\n",
+    "\n",
+    "```bash\n",
+    "z = 10*x1 + 10*x2 - 15\n",
+    "\n",
+    "and\n",
+    "\n",
+    "10*x1 + 10*x2 - 15 = 0 // The Sigmoid Function outputs 0.5 when z = 0\n",
+    "\n",
+    "So,\n",
+    "\n",
+    "x1 + x2 = 1.5\n",
+    "\n",
+    "or\n",
+    "\n",
+    "x2 = 1.5 - x1 i.e. y = mx + c\n",
+    "```\n",
+    "\n",
+    "Because this equation defines a line in the 2D space (x1, x2) that separates the two classes (0 and 1).\n",
+    "\n",
+    "**Image**\n",
+    "\n",
+    "<img src='./Notes_Images/boundary_line.png'>\n",
+    "\n",
     "### **Note**\n",
     "\n",
     "We just witnessed how a `Simple Single Perceptron` can model the behavior of an `AND` gate using a non-linear activation function.\n",
