--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -24,6 +24,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71513c55",
+   "metadata": {},
+   "source": [
+    "# **Tomorrow**\n",
+    "\n",
+    "[OR_Gate](https://www.linkedin.com/learning/training-neural-networks-in-c-plus-plus-22661958/solution-logic-gates-with-perceptrons?resume=false&u=42288921)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d61e01b",
    "metadata": {},
    "source": [
