--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -526,6 +526,29 @@
     "// 1 AND 1 = 0.993307\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60017613",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89035573",
+   "metadata": {},
+   "source": [
+    "## **OR Gate**\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
