--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -545,7 +545,13 @@
    "source": [
     "## **OR Gate**\n",
     "\n",
+    "<img src='./Notes_Images/or_gate.png'>\n",
+    "\n",
+    "The OR gate outputs 1 if at least one of the inputs is 1, otherwise, it outputs 0.\n",
+    "\n",
     "<hr>\n",
+    "\n",
+    "The weights should be `{15,15}` and the bias should be `-10`.\n",
     "\n",
     "\n"
    ]
