--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -553,7 +553,24 @@
     "\n",
     "The weights should be `{15,15}` and the bias should be `-10`.\n",
     "\n",
-    "\n"
+    "The linear combination for the OR gate can be expressed as:\n",
+    "\n",
+    "```bash\n",
+    "15x + 15y - 10 = 0\n",
+    "\n",
+    "then\n",
+    "\n",
+    "y = -x + 2/3\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Output would be\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "// Output\n",
+    "\n",
+    "```\n"
    ]
   }
  ],
