--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -564,11 +564,17 @@
     "\n",
     "```\n",
     "\n",
-    "Output would be\n",
+    "Below are the outputs of Sigmoid function for the OR gate:\n",
     "\n",
     "```C++\n",
     "\n",
     "// Output\n",
+    "\n",
+    "// Gate: OR\n",
+    "// 0 AND 0 = 4.53979e-05\n",
+    "// 0 AND 1 = 0.993307\n",
+    "// 1 AND 0 = 0.993307\n",
+    "// 1 AND 1 = 1\n",
     "\n",
     "```\n"
    ]
