--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -576,7 +576,11 @@
     "// 1 AND 0 = 0.993307\n",
     "// 1 AND 1 = 1\n",
     "\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "**OR Gate Boundary Line Equation**\n",
+    "\n",
+    "<img src='./Notes_Images/or_gate_boundary.png'>\n"
    ]
   }
  ],
