docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -582,6 +582,81 @@
     "\n",
     "<img src='./Notes_Images/or_gate_boundary.png'>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52ab66ef",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "807be646",
+   "metadata": {},
+   "source": [
+    "## **Linear Separability**\n",
+    "\n",
+    "`Linear separability` is a property of a dataset that allows it to be separated into different classes using a `linear boundary`. In the context of neural networks, this means that a single layer perceptron can be used to classify the data points.\n",
+    "\n",
+    "For example, the `AND` gate is linearly separable because we can draw a `straight line` (or `hyperplane` in higher dimensions) that separates the positive examples (1s) from the negative examples (0s).\n",
+    "\n",
+    "Similarly, the `OR` gate is also linearly separable for the same reason.\n",
+    "\n",
+    "**Note**\n",
+    "\n",
+    "- Both the `Straight Line` i.e. `y = mx + b` and the `Hyperplane` i.e. `W*x + b = 0` can be used to separate linearly separable data.\n",
+    "\n",
+    "- For 2 dimensional data i.e. 2 input features we need the equation of line, for 3 dimensional data, we need the equation of plane i.e. `Ax + By + Cz + D = 0` and for data whose dimension is greater than 3, we need the equation of hyperplane i.e. `W*x + b = 0`, where `W` is the weight vector and `b` is the bias.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "On the other hand, the `XOR` gate is not linearly separable because there is no single straight line that can separate the positive examples from the negative examples.\n",
+    "\n",
+    "Below is the Graphical representation of the `XOR` gate:\n",
+    "\n",
+    "<img src='./Notes_Images/xor_gate.png'>\n",
+    "\n",
+    "Here, we cannot separate the positive and negative examples with a single straight line. We would need two lines to separate the classes.\n",
+    "\n",
+    "If we use an `OR` gate only, it will get all but one of the `XOR` gate inputs correct. The `OR` gate will output `1` for both `(0, 1)` and `(1, 0)` inputs, which is incorrect for the `XOR` operation.\n",
+    "\n",
+    "<img src='./Notes_Images/or_for_xor.png'>\n",
+    "\n",
+    "If we use `NAND` gate, it will give one incorrect output for the `(0, 0)` input, which is the only case where the `XOR` gate outputs `1`.\n",
+    "\n",
+    "<img src='./Notes_Images/nand_for_xor.png'>\n",
+    "\n",
+    "**But**\n",
+    "\n",
+    "If we combine the outputs of the `NAND` gate and the `OR` gate, we can create a circuit that correctly implements the `XOR` function.\n",
+    "\n",
+    "<img src='./Notes_Images/nand_or_xor.png'>\n",
+    "\n",
+    "### **Creating XOR with NAND, AND, and OR Gates**\n",
+    "\n",
+    "To create an `XOR` gate using `NAND`, `AND`, and `OR` gates, we can use the following configuration:\n",
+    "\n",
+    "1. **Inputs**: A and B\n",
+    "\n",
+    "2. **NAND Gate**: Connect A and B to a `NAND` gate. This will give us the output `NAND(A, B)`.\n",
+    "\n",
+    "3. **OR Gate**: Connect A and B to an `OR` gate. This will give us the output `OR(A, B)`.\n",
+    "\n",
+    "4. **AND Gate**: Connect the outputs of the `NAND` gate and the `OR` gate to an `AND` gate. This will give us the final output `XOR(A, B)`.\n",
+    "\n",
+    "The logical expression for the `XOR` gate can be represented as:\n",
+    "\n",
+    "```bash\n",
+    "XOR(A, B) = AND(NAND(A, B), OR(A, B))\n",
+    "```\n",
+    "\n",
+    "This configuration allows us to implement the `XOR` function using only `NAND`, `AND`, and `OR` gates.\n"
+   ]
   }
  ],
  "metadata": {
