docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -655,7 +655,17 @@
     "XOR(A, B) = AND(NAND(A, B), OR(A, B))\n",
     "```\n",
     "\n",
-    "This configuration allows us to implement the `XOR` function using only `NAND`, `AND`, and `OR` gates.\n"
+    "This configuration allows us to implement the `XOR` function using only `NAND`, `AND`, and `OR` gates.\n",
+    "\n",
+    "**XOR Diagram**\n",
+    "\n",
+    "<img src='./Notes_Images/xor_diagram.png'>\n",
+    "\n",
+    "### **Neural Network for XOR Gate**\n",
+    "\n",
+    "We know a single perceptron can solve a linear separable problem, but the `XOR` function is not linearly separable. Therefore, we need a neural network with `3 perceptrons` i.e. `2 in the hidden layer and 1 in the output layer`.\n",
+    "\n",
+    "Also, we know that a single perceptron can represent all the three basic logic gates: `AND`, `OR`, and `NAND` each having different `weight` and `bias` configurations.\n"
    ]
   }
  ],
