docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -668,7 +668,16 @@
     "Also, we know that a single perceptron can represent all the three basic logic gates: `AND`, `OR`, and `NAND` each having different `weight` and `bias` configurations.\n",
     "\n",
     "**Linear Equations for Basic Logic Gates**\n",
-    "\n"
+    "\n",
+    "`OR Gate` : `y = -x + 0.5` with Weights `{15,15}` and Bias `{-10}`\n",
+    "\n",
+    "`NAND Gate` : `y = x + 1.5` with Weights `{-10,-10}` and Bias `{15}`\n",
+    "\n",
+    "Then we plug the output of `OR Gate` and `NAND Gate` as an Input for the `AND Gate`\n",
+    "\n",
+    "`AND Gate` : `y = -x + 1.5` with Weights `{10.10}` and Bias `{-15}`\n",
+    "\n",
+    "<hr>\n"
    ]
   }
  ],
