docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -679,6 +679,46 @@
     "\n",
     "<hr>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b11968e3",
+   "metadata": {},
+   "source": [
+    "## **Multi Layer Perceptron**\n",
+    "\n",
+    "A Multi-Layer Perceptron (MLP) is a type of neural network that consists of multiple layers of neurons, including an input layer, one or more hidden layers, and an output layer. MLPs are capable of learning complex patterns in data and can be used for a variety of tasks, including classification and regression.\n",
+    "\n",
+    "**Image of MLP for XOR Gate**\n",
+    "\n",
+    "<img src='./Notes_Images/mlp.png'/>\n",
+    "\n",
+    "### **Architecture of MLP for XOR Gate**\n",
+    "\n",
+    "1. **Input Layer**: The input layer consists of two inputs, each representing one of the input features (X1 and X2) of the XOR gate.\n",
+    "\n",
+    "2. **Hidden Layer**: The hidden layer contains two neurons. One of the neurons represents the `NAND Gate` operation, while the other represents the `OR` operation.\n",
+    "\n",
+    "3. **Output Layer**: The output layer consists of a single neuron that produces the final output of the network. This neuron receives inputs from both hidden layer neurons, applies a weighted sum and a non-linear activation function, and produces the final output (Y) of the `XOR` gate.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164bf1a7",
+   "metadata": {},
+   "source": [
+    "## **XOR Gate Implementation**\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "In the `mlp.h` file previously we had written declaration for the `Single Perceptron` class. Now, we will extend this class to create a `MultiLayerPerceptron` class that can handle the XOR problem.\n",
+    "\n",
+    "**`mlp.h`**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
