--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -716,8 +716,81 @@
     "**`mlp.h`**\n",
     "\n",
     "```C++\n",
+    "#pragma once\n",
     "\n",
-    "```\n"
+    "#include <algorithm>\n",
+    "#include <vector>\n",
+    "#include <iostream>\n",
+    "#include <random>\n",
+    "#include <numeric>\n",
+    "#include <cmath>\n",
+    "#include <time.h>\n",
+    "\n",
+    "class Perceptron\n",
+    "{\n",
+    "public:\n",
+    "  std::vector<double> weights;\n",
+    "  double bias;\n",
+    "\n",
+    "  // Constructor\n",
+    "  Perceptron(size_t inputs, double bias = 1.0);\n",
+    "\n",
+    "  // Run the Perceptron\n",
+    "  double run(std::vector<double> x);\n",
+    "\n",
+    "  // Set the Customize Weights if Needed\n",
+    "  void set_weights(std::vector<double> w_init);\n",
+    "\n",
+    "  // Sigmoid Activation Function\n",
+    "  double sigmoid(double x);\n",
+    "};\n",
+    "\n",
+    "class MultiLayerPerceptron\n",
+    "{\n",
+    "public:\n",
+    "  // Constructor for initilizing layers\n",
+    "  MultiLayerPerceptron(std::vector<size_t> layers, double bias = 1.0, double eta = 0.5);\n",
+    "\n",
+    "  // Set custom weights, w_init for weights of 3 perceptron\n",
+    "  void set_weights(std::vector<std::vector<std::vector<double>>> w_init);\n",
+    "\n",
+    "  // Display the weights\n",
+    "  void print_weights();\n",
+    "\n",
+    "  // Run the MLP\n",
+    "  std::vector<double> run(std::vector<double> x);\n",
+    "\n",
+    "  // For Backpropagation\n",
+    "  double bp(std::vector<double> x, std::vector<double> y);\n",
+    "\n",
+    "  // Attributes\n",
+    "\n",
+    "  std::vector<size_t> layers; // Unsigned Integers, Number of Neurons Per Layer, 0 for Input, 2 for Hidden, 1 for Output\n",
+    "\n",
+    "  double bias; // Bias\n",
+    "  double eta;  // Learning Rate\n",
+    "\n",
+    "  std::vector<std::vector<Perceptron>> network; // Neural Network\n",
+    "  std::vector<std::vector<double>> values;      // Hodl the Output Valuse of the Network\n",
+    "  std::vector<std::vector<double>> d;           // Error Terms for the Neurons\n",
+    "};\n",
+    "```\n",
+    "\n",
+    "In the above code,\n",
+    "\n",
+    "The `MultiLayerPerceptron` class is designed to handle the XOR problem by utilizing multiple layers of neurons.\n",
+    "\n",
+    "**`MultiLayerPerceptron(std::vector<size_t> layers, double bias = 1.0, double eta = 0.5)`** : This constructor initializes the MLP with the specified layer structure, bias, and learning rate. It creates the necessary layers and populates the network with `Perceptron` objects.\n",
+    "\n",
+    "**`run(std::vector<double> x)`** : This method takes an input vector `x` and passes it through the network, returning the output of the MLP.\n",
+    "\n",
+    "**`bp(std::vector<double> x, std::vector<double> y)`** : This method performs backpropagation to update the weights of the network based on the error between the predicted output and the true output `y`.\n",
+    "\n",
+    "**`std::vector<std::vector<Perceptron>> network;`** : This attribute holds the layers of the MLP, where each layer is a vector of `Perceptron` objects.\n",
+    "\n",
+    "**`std::vector<std::vector<double>> values;`** : This attribute stores the output values of each neuron in the network for a given input.\n",
+    "\n",
+    "**`std::vector<std::vector<double>> d;`** : This attribute holds the error terms for the neurons, which are used during backpropagation to update the weights.\n"
    ]
   }
  ],
