docs: xor with NAND, OR and AND

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -713,7 +713,7 @@
     "\n",
     "In the `mlp.h` file previously we had written declaration for the `Single Perceptron` class. Now, we will extend this class to create a `MultiLayerPerceptron` class that can handle the XOR problem.\n",
     "\n",
-    "**`mlp.h`**\n",
+    "### **`mlp.h`**\n",
     "\n",
     "```C++\n",
     "#pragma once\n",
@@ -790,7 +790,109 @@
     "\n",
     "**`std::vector<std::vector<double>> values;`** : This attribute stores the output values of each neuron in the network for a given input.\n",
     "\n",
-    "**`std::vector<std::vector<double>> d;`** : This attribute holds the error terms for the neurons, which are used during backpropagation to update the weights.\n"
+    "**`std::vector<std::vector<double>> d;`** : This attribute holds the error terms for the neurons, which are used during backpropagation to update the weights.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **`mlp.cpp`**\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "#include \"mlp.h\"\n",
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
+    "// Random Number Generator Function\n",
+    "double frand()\n",
+    "{\n",
+    "  return (2.0 * (double)rand() / RAND_MAX) - 1.0;\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "Single Layer Perceptron Implementation\n",
+    "*/\n",
+    "\n",
+    "// Return a new Perceptron Object with the Specified number of Inputs (+1 for the bias)\n",
+    "\n",
+    "Perceptron::Perceptron(size_t inputs, double bias)\n",
+    "{\n",
+    "  this->bias = bias;\n",
+    "\n",
+    "  // Initialize the Weights as Random numbers of Double between -1 and 1\n",
+    "\n",
+    "  weights.resize(inputs + 1); // Resize the Vector for Weights + Bias\n",
+    "\n",
+    "  // Generate Random Numbers and Fill in the Vectors. Pass the frand function to generate the number\n",
+    "\n",
+    "  generate(weights.begin(), weights.end(), frand);\n",
+    "}\n",
+    "\n",
+    "// Run Function\n",
+    "// Feeds an Input Vector X into the perceptron to return the activation function output.\n",
+    "\n",
+    "double Perceptron::run(std::vector<double> x)\n",
+    "{\n",
+    "\n",
+    "  // Add the bias at the end\n",
+    "  x.push_back(bias);\n",
+    "\n",
+    "  // Weighted Sum\n",
+    "  double sum = inner_product(x.begin(), x.end(), weights.begin(), (double)0.0);\n",
+    "\n",
+    "  return sigmoid(sum); // Pass into the sigmoid function\n",
+    "}\n",
+    "\n",
+    "// Set the weights. w_init is a vector with the Weights\n",
+    "\n",
+    "void Perceptron::set_weights(std::vector<double> w_init)\n",
+    "{\n",
+    "  weights = w_init; // Copies the vector\n",
+    "}\n",
+    "\n",
+    "// Evaluate the Sigmoid Function for the floating point of input\n",
+    "\n",
+    "double Perceptron::sigmoid(double x)\n",
+    "{\n",
+    "  return 1.0 / (1.0 + exp(-x));\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "Multi Layer Perceptron Implementation\n",
+    "*/\n",
+    "\n",
+    "// Return a new Perceptron Object with the Specified number of Inputs (+1 for the bias)\n",
+    "\n",
+    "MultiLayerPerceptron::MultiLayerPerceptron(std::vector<size_t> layers, double bias, double eta) : layers(layers), bias(bias), eta(eta)\n",
+    "{\n",
+    "  // Create Neurons Layer By Layer\n",
+    "\n",
+    "  for (size_t i = 0; i < layers.size(); i++)\n",
+    "  {\n",
+    "    // Add Vector of Values Filled with Zeros\n",
+    "    values.push_back(vector<double>(layers[i], 0.0));\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Here, in the above code for `MLP`,\n",
+    "\n",
+    "**`MultiLayerPerceptron::MultiLayerPerceptron(std::vector<size_t> layers, double bias, double eta)`** : This constructor initializes the MLP with the specified layer structure, bias, and learning rate. It creates the necessary layers and populates the network with `Perceptron` objects.\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "// Create Neurons Layer By Layer\n",
+    "\n",
+    "  for (size_t i = 0; i < layers.size(); i++)\n",
+    "  {\n",
+    "    // Add Vector of Values Filled with Zeros\n",
+    "    values.push_back(vector<double>(layers[i], 0.0));\n",
+    "  }\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The above code creates the necessary layers for the MLP by adding vectors of zeros for each layer. This sets up the structure for the neuron outputs, which will be filled during the forward pass of the network.\n",
+    "\n",
+    "`vector<double>(layers[i], 0.0)` : Uses the `std::vector` constructor to create a vector of the specified size (`layers[i]`) initialized with zeros (`0.0`).\n"
    ]
   }
  ],
