--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -869,7 +869,10 @@
     "  for (size_t i = 0; i < layers.size(); i++)\n",
     "  {\n",
     "    // Add Vector of Values Filled with Zeros\n",
-    "    values.push_back(vector<double>(layers[i], 0.0));\n",
+    "    values.push_back(vector<double>(layers[i], 0.0)); // Output of Each Neuron Value set to Zero based on the number of Neurons in Each layer\n",
+    "\n",
+    "    // Add Vector of Neurons\n",
+    "    network.push_back(vector<Perceptron>());\n",
     "  }\n",
     "}\n",
     "```\n",
@@ -882,17 +885,24 @@
     "\n",
     "// Create Neurons Layer By Layer\n",
     "\n",
-    "  for (size_t i = 0; i < layers.size(); i++)\n",
-    "  {\n",
-    "    // Add Vector of Values Filled with Zeros\n",
-    "    values.push_back(vector<double>(layers[i], 0.0));\n",
-    "  }\n",
+    "for (size_t i = 0; i < layers.size(); i++)\n",
+    "{\n",
+    "  // Add Vector of Values Filled with Zeros\n",
+    "  values.push_back(vector<double>(layers[i], 0.0));\n",
+    "}\n",
     "\n",
     "```\n",
     "\n",
     "The above code creates the necessary layers for the MLP by adding vectors of zeros for each layer. This sets up the structure for the neuron outputs, which will be filled during the forward pass of the network.\n",
     "\n",
-    "`vector<double>(layers[i], 0.0)` : Uses the `std::vector` constructor to create a vector of the specified size (`layers[i]`) initialized with zeros (`0.0`).\n"
+    "`vector<double>(layers[i], 0.0)` : Uses the `std::vector` constructor to create a vector of the specified size (`layers[i]`) initialized with zeros (`0.0`).\n",
+    "\n",
+    "```C++\n",
+    "// Add Vector of Neurons\n",
+    "network.push_back(vector<Perceptron>());\n",
+    "```\n",
+    "\n",
+    "The above code adds a new vector of `Perceptron` objects for each layer in the network. This sets up the structure for the neurons in each layer, which will be initialized with random weights during the training process.\n"
    ]
   }
  ],
